# RG3

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: build.yml  deploy.yml
CMake/: RG3_Config.h.in
Cpp/: CMakeLists.txt
Cpp/include/RG3/Cpp/: AbstractMutex.h  BuiltinTags.h  Cpp.h  CppNamespace.h  DefinitionLocation.h  Tag.h  TransactionGuard.h  TypeAlias.h  TypeBase.h  TypeBaseInfo.h  TypeClass.h  TypeEnum.h  TypeID.h  TypeKind.h  TypeReference.h  TypeStatement.h
Cpp/source/: CppNamespace.cpp  DefinitionLocation.cpp  Tag.cpp  TagArgument.cpp  TypeAlias.cpp  TypeBase.cpp  TypeBaseInfo.cpp  TypeClass.cpp  TypeEnum.cpp  TypeReference.cpp  TypeStatement.cpp
Extension/: README.md  setup.py
Extension/rg3py/: __init__.py
LLVM/: CMakeLists.txt
LLVM/include/RG3/LLVM/: Annotations.h  CodeAnalyzer.h  CodeEvaluator.h  Compiler.h  CompilerConfig.h  CompilerConfigDetector.h  CompilerInstanceFactory.h  LLVM.h  Utils.h
LLVM/include/RG3/LLVM/Actions/: CollectConstexprVariableEvalResultAction.h  ExtractTypesFromTU.h
LLVM/include/RG3/LLVM/Consumers/: CollectConstexprVariableEvalResult.h  CollectTypesFromTU.h  CompilerDiagnosticsConsumer.h
LLVM/include/RG3/LLVM/Visitors/: CxxClassTypeVisitor.h  CxxRouterVisitor.h  CxxTemplateSpecializationVisitor.h  CxxTypeVisitor.h
LLVM/source/: Annotations.cpp  CodeAnalyzer.cpp  CodeEvaluator.cpp  Compiler.cpp  CompilerConfigDetector.cpp  CompilerInstanceFactory.cpp  LLVM.cpp  Utils.cpp
LLVM/source/Actions/: CollectConstexprVariableEvalResultAction.cpp  ExtractTypesFromTU.cpp
LLVM/source/Consumers/: CollectConstexprVariableEvalResult.cpp  CollectTypesFromTU.cpp  CompilerDiagnosticsConsumer.cpp
LLVM/source/Visitors/: CxxClassTypeVisitor.cpp  CxxRouterVisitor.cpp  CxxTemplateSpecializationVisitor.cpp  CxxTypeVisitor.cpp
Protobuf/: CMakeLists.txt
Protobuf/include/RG3/Protobuf/: Compiler.h  Enum.h  Location.h  Message.h  Protobuf.h  ProtobufAnalyzer.h  Service.h
Protobuf/source/: Enum.cpp  ProtobufAnalyzer.cpp
PyBind/: CMakeLists.txt  rg3py.pyi  rg3py_ext.pyi
PyBind/include/RG3/PyBind/: PyAnalyzerContext.h  PyBind.h  PyClangRuntime.h  PyClassParent.h  PyCodeAnalyzerBuilder.h  PyTag.h  PyTypeAlias.h  PyTypeBase.h  PyTypeClass.h  PyTypeEnum.h
PyBind/source/: PyAnalyzerContext.cpp  PyBind.cpp  PyClangRuntime.cpp  PyClassParent.cpp  PyCodeAnalyzerBuilder.cpp  PyTag.cpp  PyTypeAlias.cpp  PyTypeBase.cpp  PyTypeClass.cpp  PyTypeEnum.cpp
PyDocs/: conf.py  index.rst
Tests/PyIntegration/: tests.py
Tests/PyIntegration/samples/: Header1.h  HeaderWithError.h  HeaderWithMultipleInheritance.h  HeaderWithUsingDecls.h
Tests/Unit/: CMakeLists.txt
Tests/Unit/source/: CommonHelpers.h  Entry.cpp  Test_AnonymousRegistration.cpp  Test_BuiltinDefs.cpp  Test_CompilerIncludeDirs.cpp  Test_Inheritance.cpp  Test_TypeReference.cpp  Tests_ClassInternals.cpp  Tests_CodeEvaluator.cpp  Tests_Comment.cpp  Tests_Compiler.cpp  Tests_EntryVisibillity.cpp  Tests_Enum.cpp  Tests_ErrorReporting.cpp  Tests_FsFile.cpp  Tests_InnerDeclaration.cpp  Tests_MemberFunctions.cpp  Tests_Protobuf.cpp  Tests_ThirdPartyAnalysis.cpp  Tests_TypeAliasing.cpp
Tests/Unit/test_headers/: Test.h  TestDefs.h  TestInc.h
Tests/Unit/test_headers/include/Awesome/: Awesome.h
Usage/: dump_types.py
